tests/baselines/reference/classWithDuplicateIdentifier.types
=== tests/cases/compiler/classWithDuplicateIdentifier.ts ===
class C {
>C : C

    a(): number { return 0; } // error: duplicate identifier
>a : number
>类型别名 :=> 数字
>0 : 0

    a: number;
>a : number
>类型别名 :=> 数字
}
class K {
>K : K

    b: number; // error: duplicate identifier
>b : number
>类型别名 :=> 数字

    b(): number { return 0; }
>b : () => number
>0 : 0
}
class D {
>D : D

    c: number;
>c : number
>类型别名 :=> 数字

    c: string;
>c : number
>类型别名 :=> 数字
}

